Beta 1 Version 1.0.0.0
======================
- Fixed ProxyGenerationOptions equality issues with ordering and different instances of the same mixin types (thanks for finding
  the bug, Rogelio)

- Readded mixin support (via Rogelio J. Baucells)

- ClassEmitter now supports emitting fields with specific attributes

- Added a load API to ModuleScope
- SaveAssembly now serializes the cache keys together with the generated types

- Fixed test issue - PEVerify is now called with a quoted assembly path (to allow for spaces in the path)
- Fixed test annoyance - PEVerify is now not called in a separate window
- Changed PersistentProxyBuilder behavior - SaveAssembly is not called by the class generators any more, instead PersistentProxyBuilder.SaveAssemblies
  must be used. This allows the proxy builder to save multiple proxies at the same time. Test cases have been adapted.

- Fixed issues with CacheKey.Equals and ProxyGenerationOptions.Equals/GetHashCode
- Added a way to set and retrieve the ModuleScope used by ProxyObjectReference for proxy deserialization; proxies can now be deserialized with
  the same ModuleScope used by the application (DYNPROXY-71)

- Made BasePEVerifyTestCase only check those assemblies that were actually generated in the test case, see DYNPROXY-68
- Fixed bug with protected internal constructors, see DYNPROXY-66/DYNPROXY-67
- Fixed test cases not using the ProxyGenerator supplied by BasePEVerifyTestCase, see DYNPROXY-69

- Added StrongNameUtil, which provides methods for checking whether an assembly is signed/a type comes from a signed assembly
- Added an additional constructor overload to ClassEmitter, allowing to force it to use an unsigned assembly

- Fixed a bug in ModuleScope: SaveAssembly tried to delete from the current directory if a file with a matching name existed, not from the target
  directory

- Applied Pawel Pabich's suggestion fixing DYNPROXY-65 
  "OpCodeUtil.GetUnderlyingTypeOfEnum doesn't handle unsigned integers"
